--- a/week03_fast_pipelines/seminar/practice.ipynb
+++ b/week03_fast_pipelines/seminar/practice.ipynb
@@ -1448,7 +1448,9 @@
    "cell_type": "markdown",
    "id": "5ff4d5aa",
    "metadata": {},
-   "source": "Here is also a nice [article by Hugging Face](https://huggingface.co/blog/train_memory) on memory profiling."
+   "source": [
+    "Here is also a nice [article by Hugging Face](https://huggingface.co/blog/train_memory) on memory profiling."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1485,12 +1487,14 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "!nsys profile python3 mnist_training_nsys.py --emit-nvtx",
-   "id": "609d47b43a5c3661"
+   "id": "609d47b43a5c3661",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!nsys profile python3 mnist_training_nsys.py --emit-nvtx"
+   ]
   },
   {
    "cell_type": "code",
@@ -2185,7 +2189,6 @@
    "cell_type": "markdown",
    "id": "409af553",
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -2326,7 +2329,6 @@
    "cell_type": "markdown",
    "id": "a7ce58b3",
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -2393,7 +2395,6 @@
    "cell_type": "markdown",
    "id": "25c86f81",
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -2431,7 +2432,6 @@
    "cell_type": "markdown",
    "id": "4c6a43ea",
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -2574,7 +2574,6 @@
    "cell_type": "markdown",
    "id": "de7896df",
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -2594,7 +2593,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "DataSphere Kernel",
    "language": "python",
    "name": "python3"
   },
