--- a/week04_data_parallel/homework/syncbn_testing.ipynb
+++ b/week04_data_parallel/homework/syncbn_testing.ipynb
@@ -43,7 +43,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
+   "id": "33e8a2ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 0.1808, -0.0700, -0.3596, -0.9152, -2.0371],\n",
+      "        [ 0.4931,  1.4870,  0.5910, -0.0476, -1.0996],\n",
+      "        [-1.7524, -1.0971,  0.4478, -0.8016,  1.5236],\n",
+      "        [ 2.5086,  0.1662,  1.2055,  0.1883, -2.1600]], requires_grad=True)\n",
+      "-----\n",
+      "tensor([[-0.1170, -0.2081, -1.4895, -1.1006, -0.7380],\n",
+      "        [ 0.0898,  1.4836,  0.2149,  0.7316, -0.1055],\n",
+      "        [-1.3967, -1.3241, -0.0419, -0.8608,  1.6644],\n",
+      "        [ 1.4239,  0.0485,  1.3165,  1.2297, -0.8209]],\n",
+      "       grad_fn=<NativeBatchNormBackward0>)\n",
+      "-----\n",
+      "tensor([[ 0.3304,  0.6154,  0.0455,  0.8415,  0.2323],\n",
+      "        [ 0.3314,  0.0292,  1.0192,  1.1984,  0.3223],\n",
+      "        [-0.3373, -0.0845, -0.9204, -1.2235, -0.1005],\n",
+      "        [-0.3246, -0.5601, -0.1443, -0.8163, -0.4541]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from torch import nn\n",
+    "torch.manual_seed(1337)\n",
+    "bn = nn.BatchNorm1d(5, affine=False, track_running_stats=True)\n",
+    "data = torch.randn(4, 5)\n",
+    "# data = torch.Tensor([[1, 1, 1, 1, 1],\n",
+    "#                         [0, 0, 0, 0, 0], \n",
+    "#                         [0, 0, 0, 0, 0],\n",
+    "#                         [0, 0, 0, 0, 0]])\n",
+    "data.requires_grad = True\n",
+    "print(data)\n",
+    "print(\"-----\")\n",
+    "out = bn(data)\n",
+    "print(out)\n",
+    "print(\"-----\")\n",
+    "\n",
+    "loss = out[:2, ].sum()\n",
+    "loss.backward()\n",
+    "print(data.grad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "d28e2073-ca3e-4681-866b-b62009aa7c29",
    "metadata": {
     "execution": {
@@ -59,22 +109,16 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[1., 1., 1., 1., 1.],\n",
-       "        [0., 0., 0., 0., 0.],\n",
-       "        [0., 0., 0., 0., 0.],\n",
-       "        [1., 1., 1., 1., 1.]])"
+       "tensor([ 0.3575,  0.1215,  0.4712, -0.3940, -0.9433], grad_fn=<MeanBackward1>)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = torch.zeros((4, 5))\n",
-    "data[0] = 1\n",
-    "data[3] = 1\n",
-    "data"
+    "torch.mean(data, dim=0)"
    ]
   },
   {
@@ -146,7 +190,18 @@
     }
    ],
    "source": [
-    "!python3 test_syncbn.py"
+    "# def bn_test_2(rank, size):\n",
+    "#     torch.manual_seed(1337)\n",
+    "#     data = torch.randn(4, 5)\n",
+    "#     local_data = data[rank*2:rank*2 + 2, ]\n",
+    "#     local_data.requires_grad = True\n",
+    "#     sbn = SyncBatchNorm(5)\n",
+    "#     out = sbn(local_data)\n",
+    "#     loss = torch.sum(out)\n",
+    "#     if rank:\n",
+    "#         loss *= 0\n",
+    "#     loss.backward()\n",
+    "#     print('Rank ', rank, local_data.grad)"
    ]
   },
   {
@@ -261,8 +316,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "a63e106a-da31-4e02-9e22-8f1cd3c8d235",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading https://www.cs.toronto.edu/~kriz/cifar-100-python.tar.gz to ./cifar/cifar-100-python.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./cifar/cifar-100-python.tar.gz to ./cifar\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.distributed as dist\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "from torch.nn.parallel import DistributedDataParallel\n",
+    "import torchvision.transforms as transforms\n",
+    "from torch.utils.data import DataLoader\n",
+    "from torch.utils.data.distributed import DistributedSampler\n",
+    "from torchvision.datasets import CIFAR100\n",
+    "\n",
+    "\n",
+    "dataset = CIFAR100(\n",
+    "    \"./cifar\",\n",
+    "    transform=transforms.Compose(\n",
+    "        [\n",
+    "            transforms.ToTensor(),\n",
+    "            transforms.Normalize((0.5071, 0.4867, 0.4408), (0.2675, 0.2565, 0.2761)),\n",
+    "        ]\n",
+    "    ),\n",
+    "    download=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2086720b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -270,7 +377,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DataSphere Kernel",
+   "display_name": "ml_env",
    "language": "python",
    "name": "python3"
   },
@@ -284,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
