fixed hf specdec showcase

--- a/week09_inference_algorithms/homework/hw_w8a8_specdec.ipynb
+++ b/week09_inference_algorithms/homework/hw_w8a8_specdec.ipynb
@@ -1886,11 +1886,11 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-26T11:17:22.460210Z",
-     "iopub.status.busy": "2025-03-26T11:17:22.459882Z",
-     "iopub.status.idle": "2025-03-26T11:17:44.108746Z",
-     "shell.execute_reply": "2025-03-26T11:17:44.107808Z",
-     "shell.execute_reply.started": "2025-03-26T11:17:22.460183Z"
+     "iopub.execute_input": "2025-03-26T19:53:18.610631Z",
+     "iopub.status.busy": "2025-03-26T19:53:18.610218Z",
+     "iopub.status.idle": "2025-03-26T19:53:40.083857Z",
+     "shell.execute_reply": "2025-03-26T19:53:40.082913Z",
+     "shell.execute_reply.started": "2025-03-26T19:53:18.610604Z"
     },
     "id": "OTrG3KoU6zEo",
     "tags": []
@@ -1938,11 +1938,11 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-26T11:17:44.110626Z",
-     "iopub.status.busy": "2025-03-26T11:17:44.110101Z",
-     "iopub.status.idle": "2025-03-26T11:23:01.209137Z",
-     "shell.execute_reply": "2025-03-26T11:23:01.208367Z",
-     "shell.execute_reply.started": "2025-03-26T11:17:44.110599Z"
+     "iopub.execute_input": "2025-03-26T19:53:40.085683Z",
+     "iopub.status.busy": "2025-03-26T19:53:40.085193Z",
+     "iopub.status.idle": "2025-03-26T19:58:58.571605Z",
+     "shell.execute_reply": "2025-03-26T19:58:58.570632Z",
+     "shell.execute_reply.started": "2025-03-26T19:53:40.085660Z"
     },
     "id": "4FRrIORs6zEo",
     "tags": []
@@ -1954,9 +1954,9 @@
      "text": [
       "/usr/local/lib/python3.10/dist-packages/torchvision/io/image.py:13: UserWarning: Failed to load image Python extension: '/usr/local/lib/python3.10/dist-packages/torchvision/image.so: undefined symbol: _ZN3c1017RegisterOperatorsD1Ev'If you don't plan on using image functionality from `torchvision.io`, you can ignore this warning. Otherwise, there might be something wrong with your environment. Did you have `libjpeg` or `libpng` installed before building `torchvision` from source?\n",
       "  warn(\n",
-      "2025-03-26 11:17:51.417564: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2025-03-26 19:53:45.945035: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-03-26 11:17:55.861799: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+      "2025-03-26 19:53:49.730229: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
       "/usr/local/lib/python3.10/dist-packages/torchvision/datapoints/__init__.py:12: UserWarning: The torchvision.datapoints and torchvision.transforms.v2 namespaces are still Beta. While we do not expect major breaking changes, some APIs may still change according to user feedback. Please submit any feedback you may have in this issue: https://github.com/pytorch/vision/issues/6753, and you can also check out https://github.com/pytorch/vision/issues/7319 to learn more about the APIs that we suspect might involve future changes. You can silence this warning by calling torchvision.disable_beta_transforms_warning().\n",
       "  warnings.warn(_BETA_TRANSFORMS_WARNING)\n",
       "/usr/local/lib/python3.10/dist-packages/torchvision/transforms/v2/__init__.py:54: UserWarning: The torchvision.datapoints and torchvision.transforms.v2 namespaces are still Beta. While we do not expect major breaking changes, some APIs may still change according to user feedback. Please submit any feedback you may have in this issue: https://github.com/pytorch/vision/issues/6753, and you can also check out https://github.com/pytorch/vision/issues/7319 to learn more about the APIs that we suspect might involve future changes. You can silence this warning by calling torchvision.disable_beta_transforms_warning().\n",
@@ -1981,14 +1981,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-26T11:51:51.408966Z",
-     "iopub.status.busy": "2025-03-26T11:51:51.408527Z",
-     "iopub.status.idle": "2025-03-26T11:51:51.457610Z",
-     "shell.execute_reply": "2025-03-26T11:51:51.456827Z",
-     "shell.execute_reply.started": "2025-03-26T11:51:51.408945Z"
+     "iopub.execute_input": "2025-03-26T19:58:58.573298Z",
+     "iopub.status.busy": "2025-03-26T19:58:58.572679Z",
+     "iopub.status.idle": "2025-03-26T19:58:58.585193Z",
+     "shell.execute_reply": "2025-03-26T19:58:58.584007Z",
+     "shell.execute_reply.started": "2025-03-26T19:58:58.573277Z"
     },
     "id": "1petN_pu6zEp",
     "tags": []
@@ -2241,14 +2241,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-26T12:09:13.729554Z",
-     "iopub.status.busy": "2025-03-26T12:09:13.728061Z",
-     "iopub.status.idle": "2025-03-26T12:09:17.022830Z",
-     "shell.execute_reply": "2025-03-26T12:09:17.021958Z",
-     "shell.execute_reply.started": "2025-03-26T12:09:13.729522Z"
+     "iopub.execute_input": "2025-03-26T20:00:37.971191Z",
+     "iopub.status.busy": "2025-03-26T20:00:37.970761Z",
+     "iopub.status.idle": "2025-03-26T20:00:51.131915Z",
+     "shell.execute_reply": "2025-03-26T20:00:51.130988Z",
+     "shell.execute_reply.started": "2025-03-26T20:00:37.971169Z"
     },
     "id": "-4Nfeejt6zEp",
     "tags": []
@@ -2417,16 +2417,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-26T12:38:02.457257Z",
-     "iopub.status.busy": "2025-03-26T12:38:02.456311Z",
-     "iopub.status.idle": "2025-03-26T12:38:16.045005Z",
-     "shell.execute_reply": "2025-03-26T12:38:16.044102Z",
-     "shell.execute_reply.started": "2025-03-26T12:38:02.457222Z"
+     "iopub.execute_input": "2025-03-26T20:14:33.204954Z",
+     "iopub.status.busy": "2025-03-26T20:14:33.204542Z",
+     "iopub.status.idle": "2025-03-26T20:14:47.318461Z",
+     "shell.execute_reply": "2025-03-26T20:14:47.317473Z",
+     "shell.execute_reply.started": "2025-03-26T20:14:33.204932Z"
     },
-    "id": "QI4pngNt6zEp",
     "tags": []
    },
    "outputs": [
@@ -2434,29 +2433,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['\\n# SYSTEM PREAMBLE\\n1) You are an excellent Python software developer with over 10 years of experience. You have a strong understanding of Python related topics, data structures, libraries, frameworks, algorithms, best practices and optimization techniques.\\n2) You are here to help the user (the software developer) by breaking his request in ## TASK into logical steps and writing high-quality and efficient code to implement each step.\\n3) You have to return the entire code.\\n4) Follow \"Answering rules\" without exception.\\n\\n## ANSWERING RULES\\n1) Repeat the question before answering it.\\n2) Always follow \"CHAIN OF THOUGHTS\" to execute the task.\\n\\n## CHAIN OF THOUGHTS\\n1) **OBEY the EXECUTION MODE**\\n2) **TASK ANALYSIS:**\\n   - Understand the user\\'s request thoroughly.\\n   - Identify the key components and requirements of the task.\\n3) **PLANNING: CODDING:**\\n   - Break down the task into logical, sequential steps.\\n   - Outline the strategy for implementing each step.\\n4) **CODING:**\\n   - Explain your thought process before writing any code.\\n   - Write the entire code for each step, ensuring it is clean, optimized, and well-commented.\\n   - Handle edge cases and errors appropriately.\\n5) **VERIFICATION:**\\n   - Review the complete code solution for accuracy and efficiency.\\n   - Ensure the code meets all requirements and is free of errors.\\n\\n## TASK\\n\\nWrite a python function that receives the following JSON as input and enters data from it into the Google Sheet.\\n\\n{\\n    \\'date\\': \\'31-05-2024\\',\\n   \\'revenue\\': 90000,\\n    \\'person\\' : \\'User1\\',\\n    \\'expensesList\\': [30000, 14000, 10000, 2000, 15000],\\n    \\'expensesDescList\\': [ \\'Ключи\\', \\'Ключи2\\', \\'Счет за такси\\', \\'Клей, пластины\\', \\'Провод 40м\\'],\\n    \\'expensesTypeList\\': [\\'Закупки\\', \\'Закупки\\', \\'Расходы\\', \\'Ремонт\\', \\'Ремонт\\']\\n}\\n\\nThere is a date in JSON, you can use it to determine the month.\\nThe data is entered into a list with the name of the month. If such a list does not exist yet, then you need to create a list with a new month inside the sheet.\\n\\nThe list should have the following columns (the first rows are used as headings):\\nA1: Дата расхода,\\nB1: сумма расхода,\\nC1: описание расхода,\\nD1: тип расхода,\\nE1: кто внес данные\\n\\nG1: Дата выручки\\nH1: Сумма выручки\\nI1: Кто внес данные\\n\\nPlease separate expenses and profits with a blank column.\\nPlease sort expenses by date, including those already listed in Google sheet list.\\nPlease sort earnings by date, including those already listed in Google sheet list.\\n\\nIt is prohibited to use oauth2client as it is deprecated.\\nInstead, use the service account credentials file to authenticate.\\n\\n## QUESTION\\n\\nHere is the python function that receives the JSON input and enters data from it into the Google Sheet. However, it does not sort the expenses and profits by date. I need to modify this function to add this functionality.\\n\\n## FUNCTION\\n\\n```python\\nimport json\\nfrom googleapiclient.discovery import build\\nfrom google_auth_oauthlib.flow import InstalledAppFlow\\nfrom google.auth.transport.requests import Request\\nimport pickle\\nimport os.path\\nfrom datetime import datetime\\nfrom googleapiclient.errors import HttpError\\n\\n# If modifying these scopes, delete the file token.pickle.\\nSCOPES = [\\'https://www.googleapis.com/auth/spreadsheets\\']\\n\\ndef get_service():\\n    \"\"\"Shows basic usage of the Sheets API.\\n    Prints values from a sample spreadsheet.\\n    \"\"\"\\n    creds = None\\n    # The file token.pickle stores the user\\'s access and refresh tokens, and is\\n    # created automatically when the authorization flow completes for the first\\n    # time.\\n    if os.path.exists(\\'token.pickle\\'):\\n        with open(\\'token.pickle\\', \\'rb\\') as token:\\n            creds = pickle.load(token)\\n    # If there are no (valid) credentials available, let the user log in.\\n']\n",
-      "Elapsed time for speculative 7.117539644241333\n",
-      "['\\n# SYSTEM PREAMBLE\\n1) You are an excellent Python software developer with over 10 years of experience. You have a strong understanding of Python related topics, data structures, libraries, frameworks, algorithms, best practices and optimization techniques.\\n2) You are here to help the user (the software developer) by breaking his request in ## TASK into logical steps and writing high-quality and efficient code to implement each step.\\n3) You have to return the entire code.\\n4) Follow \"Answering rules\" without exception.\\n\\n## ANSWERING RULES\\n1) Repeat the question before answering it.\\n2) Always follow \"CHAIN OF THOUGHTS\" to execute the task.\\n\\n## CHAIN OF THOUGHTS\\n1) **OBEY the EXECUTION MODE**\\n2) **TASK ANALYSIS:**\\n   - Understand the user\\'s request thoroughly.\\n   - Identify the key components and requirements of the task.\\n3) **PLANNING: CODDING:**\\n   - Break down the task into logical, sequential steps.\\n   - Outline the strategy for implementing each step.\\n4) **CODING:**\\n   - Explain your thought process before writing any code.\\n   - Write the entire code for each step, ensuring it is clean, optimized, and well-commented.\\n   - Handle edge cases and errors appropriately.\\n5) **VERIFICATION:**\\n   - Review the complete code solution for accuracy and efficiency.\\n   - Ensure the code meets all requirements and is free of errors.\\n\\n## TASK\\n\\nWrite a python function that receives the following JSON as input and enters data from it into the Google Sheet.\\n\\n{\\n    \\'date\\': \\'31-05-2024\\',\\n   \\'revenue\\': 90000,\\n    \\'person\\' : \\'User1\\',\\n    \\'expensesList\\': [30000, 14000, 10000, 2000, 15000],\\n    \\'expensesDescList\\': [ \\'Ключи\\', \\'Ключи2\\', \\'Счет за такси\\', \\'Клей, пластины\\', \\'Провод 40м\\'],\\n    \\'expensesTypeList\\': [\\'Закупки\\', \\'Закупки\\', \\'Расходы\\', \\'Ремонт\\', \\'Ремонт\\']\\n}\\n\\nThere is a date in JSON, you can use it to determine the month.\\nThe data is entered into a list with the name of the month. If such a list does not exist yet, then you need to create a list with a new month inside the sheet.\\n\\nThe list should have the following columns (the first rows are used as headings):\\nA1: Дата расхода,\\nB1: сумма расхода,\\nC1: описание расхода,\\nD1: тип расхода,\\nE1: кто внес данные\\n\\nG1: Дата выручки\\nH1: Сумма выручки\\nI1: Кто внес данные\\n\\nPlease separate expenses and profits with a blank column.\\nPlease sort expenses by date, including those already listed in Google sheet list.\\nPlease sort earnings by date, including those already listed in Google sheet list.\\n\\nIt is prohibited to use oauth2client as it is deprecated.\\nInstead, use the service account credentials to authenticate.\\n\\n## ANSWER\\n\\n### Step 1: Install the required libraries\\n\\nTo solve this problem, we will need to install the `google-api-python-client` and `google-auth` libraries. We will also need to install `google-auth-oauthlib` to handle the authentication with the service account credentials.\\n\\n```bash\\npip install google-api-python-client google-auth google-auth-oauthlib\\n```\\n\\n### Step 2: Set up the service account credentials\\n\\nWe need to set up the service account credentials by creating a JSON key file. You can follow the instructions on the [Google Cloud Console](https://console.cloud.google.com/) to create a new service account and download the JSON key file.\\n\\n```python\\nimport os\\nfrom google.oauth2 import service_account\\nfrom googleapiclient.discovery import build\\nfrom googleapiclient.errors import HttpError\\nfrom datetime import datetime\\nfrom typing import List\\n```\\n\\n### Step 3: Authenticate with the Google Sheets API\\n\\nWe will use the `service_account` library to authenticate with the Google Sheets API using the service account credentials.\\n\\n```python\\n# Replace with your service account credentials file\\nSCOPES = [\\'https://www.googleapis.com/auth/spreadsheets']\n",
-      "Elapsed time for big model inference 6.335230588912964\n"
+      "[\"Instead, use the service account credentials file to authenticate.\\n\\n## QUESTION\\n\\nHow can I write a python function that receives the JSON data and enters it into the Google Sheet using service account credentials file?\\n\\n## ANSWER\\n\\n### CHAIN OF THOUGHTS\\n\\n1. **OBEY the EXECUTION MODE**\\n2. **TASK ANALYSIS:**\\n   - Understand the user's request thoroughly.\\n   - Identify the key components and requirements of the task.\\n   - The task is to write a python function that receives the JSON data and enters it into the Google Sheet using service account credentials file.\\n3.  **PLANNING: CODDING:**\\n    - Break down the task into logical, sequential steps.\\n    - Outline the strategy for implementing each step.\\n    - The steps are:\\n        1.  Authenticate with Google Sheets using service account credentials file.\\n        2.  Create a list of months from the date in JSON.\\n        3.  Create a list of expenses and profits in Google Sheets.\\n        4.  Sort expenses and profits by date.\\n4.  **CODING:**\\n    - Import necessary libraries.\\n    - Authenticate with Google Sheets using service account credentials file.\\n    - Create a list of months from the date\"]\n",
+      "Elapsed time for speculative 7.808422565460205\n",
+      "[\"Instead, use the service account credentials file to authenticate.\\n\\n## QUESTION\\n\\nHow can I write a python function that receives the JSON data and enters it into the Google Sheet using service account credentials file?\\n\\n## ANSWER\\n\\n### CHAIN OF THOUGHTS\\n\\n1. **OBEY the EXECUTION MODE**\\n2. **TASK ANALYSIS:**\\n   - Understand the user's request thoroughly.\\n   - Identify the key components and requirements of the task.\\n   - The task is to write a python function that receives the JSON data and enters it into the Google Sheet using service account credentials file.\\n3.  **PLANNING: CODDING:**\\n    - Break down the task into logical, sequential steps.\\n    - Outline the strategy for implementing each step.\\n    - The steps are:\\n        1.  Authenticate with Google Sheets using service account credentials file.\\n        2.  Create a list of months from the date in JSON.\\n        3.  Create a list of expenses and profits in Google Sheets.\\n        4.  Sort expenses and profits by date.\\n4.  **CODING:**\\n    - Import necessary libraries.\\n    - Authenticate with Google Sheets using service account credentials file.\\n    - Create a list of months from the date\"]\n",
+      "Elapsed time for big model inference 6.2714738845825195\n"
      ]
     }
    ],
    "source": [
     "import time\n",
-    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "# !!! TASK: generate with assistant_model and compare with big model inference time\n",
     "inputs = model_inputs\n",
     "max_new_tokens = 256\n",
     "\n",
     "# SpecDec from HF\n",
     "start = time.time()\n",
-    "outputs = model_3b.generate(**inputs, max_new_tokens=max_new_tokens, assistant_model=model_1b)\n",
+    "outputs = model_3b.generate(**inputs, max_new_tokens=max_new_tokens, assistant_model=model_1b, do_sample=False)[:, -max_new_tokens:]\n",
     "print(tokenizer.batch_decode(outputs, skip_special_tokens=True))\n",
     "print(f\"Elapsed time for speculative {time.time() - start}\")\n",
     "\n",
     "# ordinary\n",
     "start = time.time()\n",
-    "outputs = model_3b.generate(**inputs, max_new_tokens=max_new_tokens)\n",
+    "outputs = model_3b.generate(**inputs, do_sample=False, max_new_tokens=max_new_tokens)[:, -max_new_tokens:]\n",
     "print(tokenizer.batch_decode(outputs, skip_special_tokens=True))\n",
     "print(f\"Elapsed time for big model inference {time.time() - start}\")"
    ]
